# axon_ia_v2

./: .gitignore  Dockerfile  FIXES_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_gpu_installation.py  verify_gpu_config.py
.github/workflows/: ci.yml  docker-build.yml
axon_ia/: __init__.py
axon_ia/config/: __init__.py  config_parser.py  default_config.yaml
axon_ia/data/: __init__.py  augmentation.py  dataset.py  preprocessing.py  samplers.py  transforms.py
axon_ia/evaluation/: __init__.py  metrics.py  report_generator.py  visualization.py
axon_ia/inference/: __init__.py  postprocessing.py  predictor.py  sliding_window.py
axon_ia/losses/: __init__.py  advanced_losses.py  boundary.py  combo.py  dice.py  factory.py  focal.py
axon_ia/models/: __init__.py  ensemble.py  model_factory.py  nnunet.py  segresnet.py  swinunetr.py  unetr.py
axon_ia/training/: __init__.py  callbacks.py  lr_schedulers.py  trainer.py
axon_ia/utils/: gpu_utils.py  logger.py  nifti_utils.py  visualization.py
configs/analysis/: example_analysis_config.yaml  post_training_analysis_config.yaml
configs/inference/: ensemble_inference.yaml
configs/training/: ensemble_config.yaml  ensemble_config_reordered.yaml  swinunetr_config.yaml  swinunetr_enhanced_config.yaml  unetr_config.yaml
docs/: analysis_script_usage.md  architecture.md  data_format.md  data_setup_guide.md  ensemble_implementation_summary.md  ensemble_training_guide.md  post_training_analysis.md
notebooks/: 01_data_preparation.ipynb  02_model_training.ipynb  03_inference.ipynb  04_model_analysis.ipynb
scripts/: evaluate.py  export_model.py  predict.py  prepare_data.py  run_ensemble_training.py  run_post_training_analysis.py  train.py  train_ensemble_enhanced.py  visualize_results.py
tests/: __init__.py  conftest.py  test_dataset.py  test_losses.py  test_models.py  test_nifti_utils.py
