[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axon_ia"
version = "0.1.0"
description = "Advanced Medical Image Segmentation Framework"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Axon IA Development Team", email = "info@axonia.org"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.20.0",
    "torch>=1.10.0",
    "monai>=0.9.0",
    "nibabel>=3.2.0",
    "SimpleITK>=2.1.0",
    "scipy>=1.7.0",
    "scikit-image>=0.18.0",
    "pandas>=1.3.0",
    "scikit-learn==1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "tqdm>=4.62.0",
    "pyyaml>=6.0",
    "tensorboard>=2.8.0",
    "wandb>=0.12.0",
    "einops>=0.6.0",  # Required for MONAI SwinUNETR
    "jinja2>=3.0.0",
    # Development dependencies (optional)
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=22.3.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "flake8>=4.0.0",
    # Documentation
    "sphinx>=4.4.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.17.0",
    "tqdm>=4.62.0",
    "rich>=12.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=22.3.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "flake8>=4.0.0",
]
docs = [
    "sphinx>=4.4.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.17.0",
]

[project.urls]
"Homepage" = "https://github.com/axonia/axon_ia"

[tool.setuptools.packages.find]
include = ["axon_ia*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"